# ESVO

./: .gitignore  .gitmodules  README.md
esvo_core/: CMakeLists.txt  esvo_mvstereo.rviz  esvo_system.rviz  esvo_system_DSEC.rviz  package.xml
esvo_core/calib/evk4/: left.yaml  right.yaml
esvo_core/cfg/mapping/: mapping_dsec.yaml  mapping_evk4.yaml  mapping_hkust.yaml  mapping_rpg.yaml  mapping_upenn.yaml
esvo_core/cfg/mvstereo/: mvstereo_rpg.yaml  mvstereo_upenn.yaml
esvo_core/cfg/time_surface/: ts_parameters.yaml
esvo_core/cfg/tracking/: tracking_dsec.yaml  tracking_evk4.yaml  tracking_hkust.yaml  tracking_rpg.yaml  tracking_upenn.yaml
esvo_core/include/esvo_core/: esvo_MVStereo.h  esvo_Mapping.h  esvo_Tracking.h
esvo_core/include/esvo_core/container/: EventMatchPair.h  TimeSurfaceObservation.h
esvo_core/include/esvo_core/core/: EventMatcher.h  RegProblemLM.h  RegProblemSolverLM.h
esvo_core/include/esvo_core/tools/: SystemStatus.h  params_helper.h  utils.h
esvo_core/launch/mvstereo/: mvstereo_rpg.launch.py  mvstereo_upenn.launch.py
esvo_core/launch/system/: system_evk4_live.launch.py  system_hkust.launch.py  system_rpg.launch.py  system_upenn.launch.py
esvo_core/launch/system/DSEC/: system_zurich_city_04_a.launch.py
esvo_core/scripts/: sync_timer_node.py
esvo_core/src/: esvo_MVStereo.cpp  esvo_MVStereoNode.cpp  esvo_Mapping.cpp  esvo_MappingNode.cpp  esvo_Tracking.cpp  esvo_TrackingNode.cpp
esvo_core/src/core/: EventBM.cpp  EventMatcher.cpp  RegProblemSolverLM.cpp
esvo_core/src/tools/: Visualization.cpp
esvo_time_surface/: CMakeLists.txt  package.xml
esvo_time_surface/cfg/: parameters.yaml
esvo_time_surface/include/esvo_time_surface/: TimeSurface.h
esvo_time_surface/scripts/: camera_info_publisher.py
esvo_time_surface/src/: TimeSurface.cpp  TimeSurface_node.cpp
launch_scripts/: monitor_esvo.sh  play_bag.sh  run_esvo.sh
launch_scripts/install/: local_setup.sh  setup.sh
launch_scripts/log/: latest_build
prophesee_calib/: 51985.json  52020.json  extrinsics.json
scripts/: convert_prophesee_calib.py  pyproject.toml
